[package]
description = "Type-erased and lifetime-erased references and slices"
edition = "2021"
name = "sashay"
version = "0.4.0"

authors = ["Stijn Frishert"]
categories = ["data-structures", "rust-patterns"]
documentation = "https://docs.rs/sashay/latest/sashay/"
homepage = "https://github.com/stijnfrishert/sashay"
keywords = ["any", "slice", "type", "erasure"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/stijnfrishert/sashay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
